Config: - Fix reloading/loading issue